# aoc2025

./: .gitignore  CMakeLists.txt  main.hpp  template.in
1/: solution.cpp
10/: solution.cpp
11/: solution.cpp
12/: solution.cpp
2/: solution.cpp
3/: solution.cpp
4/: solution.cpp
5/: solution.cpp
6/: solution.cpp
7/: solution.cpp
8/: solution.cpp
9/: solution.cpp
